--- a/stylesheets/base/grids.sass
+++ b/stylesheets/base/grids.sass
@@ -7,61 +7,48 @@
     display: table
     clear: both
   zoom: 1
-
-.unit
+.col1of2, .col1of3, .col2of3, .col1of4, .col2of4, .col3of4, .col1of5, .col2of5, .col3of5, .col4of5, .col1of6, .col2of6, .col3of6, .col4of6, .col5of6 
   float: left
-
-.unit-right
-  float: right
-
-.cutter
-  overflow: hidden
-
-.size1of1
-  float: none
-
-.size1of2
+.col1of2 
   width: 50%
-
-.size1of3
+.col1of3 
   width: 33.33333%
-
-.size2of3
+.col2of3 
   width: 66.66666%
-
-.size1of4
+.col1of4 
   width: 25%
-
-.size3of4
+.col3of4 
   width: 75%
-
-.size1of5
+.col1of5 
   width: 20%
-
-.size2of5
+.col2of5 
   width: 40%
-
-.size3of5
+.col3of5 
   width: 60%
-
-.size4of5
+.col4of5 
   width: 80%
-
-.size3of10
-  width: 30%
-
-.size18
-  width: 18%
-
-.size1of6
-  width: 15%
-
-.size1of8
-  width: 12.5%
-
-.size1of9
-  width: 11.11%
-
-.size1of10
-  width: 10%
-
+.col1of6
+  width: 16.66666%
+.col2of6 
+  width: 33.33333%
+.col3of6 
+  width: 50%
+.col4of6 
+  width: 66.66666%
+.col5of6 
+  width: 83.33333%
+.right 
+  float: right
+.left
+  float: left
+.center
+  margin-left: auto
+  margin-right: auto
+.hidden
+  display: none
+.by-left
+  text-align: left
+.by-right
+  text-align: right
+.by-center
+  text-align: center
