[#22265727] Added Firefox button focus-inner to reset

--- a/stylesheets/base/reset.sass
+++ b/stylesheets/base/reset.sass
@@ -30,3 +30,6 @@ th, h1, h2, h3, h4, h5, h6
 header, footer, aside, section, article, hgroup, nav
   display: block
 
+button::-moz-focus-inner, input::-moz-focus-inner
+  border: 0
+  padding: 0
