--- a/stylesheets/base/mixins.sass
+++ b/stylesheets/base/mixins.sass
@@ -1,31 +1,12 @@
+=animation($properties)
+  -webkit-animation: $properties
+  -moz-animation:    $properties
+  -o-animation:      $properties
+  
 =border-radius($properties)
   -webkit-border-radius: $properties
   -moz-border-radius:    $properties
   border-radius:         $properties
-
-=transition($properties)
-  -webkit-transition: $properties
-  -moz-transition:    $properties
-  -o-transition:      $properties
-  transition:         $properties
-
-=transition-delay($properties)
-  -webkit-transition-delay: $properties
-  -moz-transition-delay:    $properties
-  -o-transition-delay:      $properties
-  transition-delay:         $properties
-
-=transform($properties)
-  -webkit-transform:           $properties
-  -moz-transform:              $properties
-  -o-transform:                $properties
-  transform:                   $properties
-
-=background-image($properties)
-  background-image: -webkit-linear-gradient($properties)
-  background-image:    -moz-linear-gradient($properties)
-  background-image:      -o-linear-gradient($properties)
-  background-image:         linear-gradient($properties)
 
 =box-shadow($properties)
   -webkit-box-shadow: $properties
@@ -38,8 +19,44 @@
   -moz-box-sizing:    border-box
   box-sizing:         border-box
 
-=animation($properties)
-  -webkit-animation: $properties
-  -moz-animation:    $properties
-  -o-animation:      $properties
+=inline-block
+  display: -moz-inline-stack
+  display: inline-block
+  zoom: 1
+  *display: inline
+  _overflow: hidden
 
+=placeholder($color)
+  &:-moz-placeholder 
+    color: $color
+  &::-webkit-input-placeholder 
+    color: $color
+  
+=text-shadow($properties) 
+  -webkit-text-shadow: $properties
+  -moz-text-shadow: $properties
+  text-shadow: $properties
+  
+=transition($properties)
+  -webkit-transition: $properties
+  -moz-transition:    $properties
+  -o-transition:      $properties
+  transition:         $properties
+  
+=transform($properties)
+  -webkit-transform: $properties
+  -moz-transform:    $properties
+  -o-transform:      $properties
+  transform:         $properties
+  
+=transition-delay($properties)
+  -webkit-transition-delay: $properties
+  -moz-transition-delay:    $properties
+  -o-transition-delay:      $properties
+  transition-delay:         $properties
+
+=background-image($properties)
+  background-image: -webkit-linear-gradient($properties)
+  background-image:    -moz-linear-gradient($properties)
+  background-image:      -o-linear-gradient($properties)
+  background-image:         linear-gradient($properties)
