--- a/stylesheets/base/library.sass
+++ b/stylesheets/base/library.sass
@@ -1,12 +1,18 @@
-.hidden
-  display: none
-
-.clear
-  clear: both
-
-a
-  color: $link
+=simple-button($bgcolor: #ddd, $color: #fff, $radius: 5px)
+  color: $color
+  cursor: pointer
+  padding: 4px 10px
+  text-decoration: none
+  $shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)
+  border: 1px solid darken($bgcolor, 10%)
+  +inline-block()
+  +border-radius($radius)
+  +box-shadow($shadow)
+  +gradient-vertical(lighten($bgcolor, 3%), darken($bgcolor, 3%))
+  +text-shadow(0px -1px 0 rgba(0, 0, 0, 0.45))
   &:hover
-    color: ($link, 80%)
-    text-decoration: none
-
+    color: $color
+    background-position: 0 -15px
+  &:active
+    $shadow: 0 2px 4px rgba(0, 0, 0, .25) inset, 0 1px 2px rgba(0, 0, 0, 0.05)
+    +box-shadow($shadow)
