[#22339721] Orginized files - see pivotal ticket description

--- a/stylesheets/scaffy/.sass
+++ b/stylesheets/scaffy/.sass
@@ -1,10 +1,3 @@
-@import 'base/reset'
-@import 'base/mixins'
-@import 'base/grids'
-@import 'base/spaces'
-@import 'base/type'
-@import 'layouts/application'
-
 // Colors
 $base-font-color: #000
 $opaque:          #333
@@ -31,4 +24,10 @@ $content: '.content'
 $footer:  '.footer'
 $header:  '.header'
 $wrapper: '.wrapper'
+
+@import 'reset'
+@import 'mixins'
+@import 'grids'
+@import 'spaces'
+@import 'type'
 
