WYSIWYG test suite

--- a/stylesheets/modules/_wysiwyg.sass
+++ b/stylesheets/modules/_wysiwyg.sass
@@ -20,4 +20,26 @@
     th
       font-weight: bold
       padding: 7px 10px
+  hr
+    background-color: #ccc
+    border: none
+    height: 1px
+    margin: 15px 0
+    width: 100%
+  dl
+    margin: 10px 0
+    dt
+      font-weight: bold
+    dd
+      margin: 5px 0 10px 20px
+  .checkbox,
+  .radio
+    margin: 5px 3px
+  pre
+    font-family: inherit
+    white-space: pre-wrap
+  acronym,
+  abbr
+    border-bottom: 1px dotted #000
+    cursor: help
 
