Polishing pre and blockquote

--- a/stylesheets/modules/_wysiwyg.sass
+++ b/stylesheets/modules/_wysiwyg.sass
@@ -9,7 +9,8 @@
     li
       list-style: decimal
       margin-left: 20px
-  p
+  p,
+  blockquote
     margin: 10px 0 15px
   table
     margin: 25px 0
