--- a/app/assets/stylesheets/framework/config.css.sass
+++ b/app/assets/stylesheets/framework/config.css.sass
@@ -25,3 +25,10 @@ $footer:  '.footer'
 $header:  '.header'
 $wrapper: '.wrapper'
 
+@import 'mixins'
+@import 'reset'
+@import 'type'
+@import 'grids'
+@import 'spaces'
+@import 'library'
+
