--- a/app/assets/stylesheets/layouts/application.css.sass
+++ b/app/assets/stylesheets/layouts/application.css.sass
@@ -1,13 +1,4 @@
-@import 'scaffy/config'
-// Layout specific overrides
-$h1: 32px
-$h2: 22px
-$h3: 18px
-$h4: 16px
-$h5: 14px
-$h6: 11px
-@import 'scaffy/framework'
-@import 'modules/for-application'
+@import '../framework/config'
 
 // Local variables
 $layout-width:     980px
