New rebased files structure

--- a/app/assets/stylesheets/application-layout.css.sass
+++ b/app/assets/stylesheets/application-layout.css.sass
@@ -1,4 +1,5 @@
-@import '../framework/config'
+@import 'framework/config'
+@import 'modules/wysiwyg'
 
 // Local variables
 $layout-width:     980px
