--- a/app/assets/stylesheets/framework/config.css.sass
+++ b/app/assets/stylesheets/framework/config.css.sass
@@ -19,16 +19,11 @@ $h5: 13px
 $h6: 11px
 $base-font-size: 12px
 
-// Shared selectors
-$content: '.content'
-$footer:  '.footer'
-$header:  '.header'
-$wrapper: '.wrapper'
+//Spaces
+$extrasmall: 3px
+$small:      5px
+$medium:     10px
+$large:      20px
 
-@import 'mixins'
-@import 'reset'
-@import 'type'
-@import 'grids'
-@import 'spaces'
-@import 'library'
+@import 'list'
 
