Futurico header, text inputs, buttons

--- a/app/assets/stylesheets/framework/config.css.sass
+++ b/app/assets/stylesheets/framework/config.css.sass
@@ -10,7 +10,9 @@ $positive:        #9c0
 $negative:        #c00
 $link:            #000080
 
-// Font sizes
+// Typography
+$base-font: Arial, sans-serif
+$firm-font: Georgia, serif
 $h1: 26px
 $h2: 22px
 $h3: 18px
