--- a/app/assets/stylesheets/framework/mixins.css.sass
+++ b/app/assets/stylesheets/framework/mixins.css.sass
@@ -19,8 +19,7 @@
   -moz-box-sizing:    border-box
   box-sizing:         border-box
 
-=gradient-vertical($start-color, $end-color)
-  background-color: lighten($end-color, 10%)
+=vertical-gradient($start-color, $end-color)
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $start-color), color-stop(100%, $end-color))
   background-image: -webkit-linear-gradient(top, $start-color, $end-color)
   background-image:    -moz-linear-gradient(top, $start-color, $end-color)
@@ -29,8 +28,7 @@
   background-image:         linear-gradient(top, $start-color, $end-color)
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '$start-color', endColorstr = '$end-color')
 
-=gradient-horizontal($start-color, $end-color)
-  background-color: lighten($end-color, 10%)
+=horizontal-gradient($start-color, $end-color)
   background-image: -webkit-gradient(linear, left top, right top, color-stop(0%, $start-color), color-stop(100%, $end-color))
   background-image: -webkit-linear-gradient(left, $start-color, $end-color)
   background-image:    -moz-linear-gradient(left, $start-color, $end-color)
@@ -46,7 +44,7 @@
   _overflow: hidden
   *display: inline
 
-=placeholder($color)
+=placeholder-color($color)
   &:-moz-placeholder
     color: $color
   &::-webkit-input-placeholder
