--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -66,6 +66,8 @@
               %a.button.positive{:href => "#"} Positive button
             .mbl
               %a.button.neutral{:href => "#"} Neutral button
+            .mbl
+              %a.button.positive.disabled{:href => "#"} Disabled button
 
           .last-col
 
