--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -68,6 +68,18 @@
               %a.button.neutral{:href => "#"} Neutral button
             .mbl
               %a.button.positive.disabled{:href => "#"} Disabled button
+            .mbl
+              .scrollbox.dot
+                .scale{:style => "width: 20%"}
+                  .slider
+            .mbl
+              .scrollbox.disk
+                .scale{:style => "width: 20%"}
+                  .slider
+            .mbl
+              .scrollbox.range
+                .scale{:style => "width: 20%"}
+                  .slider
 
           .last-col
 
