--- a/app/assets/stylesheets/modules/futurico-scrollbox.css.sass
+++ b/app/assets/stylesheets/modules/futurico-scrollbox.css.sass
@@ -2,8 +2,8 @@
 
 =center-slider($size)
   height: $size
-  right: -($size / 2)
-  top: -($size / 2)
+  right: -($size / 2 - .5px)
+  top: -($size / 2 - .5px)
   width: $size
 
 // Shadows set
