Library selects states without JS

--- a/app/assets/stylesheets/framework/mixins.css.sass
+++ b/app/assets/stylesheets/framework/mixins.css.sass
@@ -67,3 +67,8 @@
   -o-transform:      $properties
   transform:         $properties
 
+=user-select($properties)
+  -webkit-user-select:      $properties
+  -moz-user-select:    -moz-$properties
+  user-select:              $properties
+
