Two inputs styles: default & rounded

--- a/app/assets/stylesheets/modules/futurico-header.css.sass
+++ b/app/assets/stylesheets/modules/futurico-header.css.sass
@@ -58,7 +58,7 @@
   // Search
   .search
     text-align: right
-    .text
+    [class*='text']
       margin: -5px 0
       width: 66%
       input[type='submit']
