--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -78,14 +78,17 @@
             -# Scrollboxes
             .mbl
               .scrollbox.dot
+                .hitbox
                 .scale{:style => "width: 20%"}
                   .slider
             .mbl
               .scrollbox.disk
+                .hitbox
                 .scale{:style => "width: 20%"}
                   .slider
             .mbl
               .scrollbox.range
+                .hitbox
                 .scale{:style => "width: 20%"}
                   .slider
 
