--- a/app/assets/stylesheets/modules/futurico-scrollbox.css.sass
+++ b/app/assets/stylesheets/modules/futurico-scrollbox.css.sass
@@ -14,6 +14,7 @@ $click: inset 0 0 7px rgba(#000, .8)
 .scrollbox
   background-color: #1e1f22
   height: 7px
+  position: relative
   +border-radius(10px)
   +box-sizing
   +box-shadow((inset 0 1px 0 #000, 0 1px 0 rgba(#fff, .1)))
@@ -21,18 +22,27 @@ $click: inset 0 0 7px rgba(#000, .8)
 
   // With a small dot slider
   &.dot
+    .hitbox
+      height: 11px
+      top: -2px
     .slider
       +center-slider(7px)
       +vertical-gradient(#f7f7f7, #9f9f9f)
 
   // Apple like with angle gradients
   &.disk
+    .hitbox
+      height: 19px
+      top: -6px
     .slider
       background: image-url('futurico/scrollbox/sliders.png') 0 0 no-repeat
       +center-slider(19px)
 
   // With side arrows < >
   &.range
+    .hitbox
+      height: 19px
+      top: -6px
     .slider
       background: image-url('futurico/scrollbox/sliders.png') center -30px no-repeat
       +center-slider(19px)
@@ -42,12 +52,15 @@ $click: inset 0 0 7px rgba(#000, .8)
     border: 2px solid #212227
     height: 3px
     position: relative
+    z-index: 1
     +border-radius(10px)
     +vertical-gradient(#7ba129, #8db439)
+
   .slider
     cursor: pointer
     margin-top: 1px
     position: absolute
+    z-index: 3
     +border-radius(50%)
     +box-shadow($medium)
     +user-select(none)
@@ -55,4 +68,10 @@ $click: inset 0 0 7px rgba(#000, .8)
       +box-shadow(($medium, $hover))
     &:active
       +box-shadow(($medium, $click))
+
+  .hitbox
+    cursor: pointer
+    position: absolute
+    width: 100%
+    z-index: 2
 
