--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -17,6 +17,7 @@
             =render :partial => "static/futurico/buttons"
             =render :partial => "static/futurico/scrollboxes"
             =render :partial => "static/futurico/selects"
+            =render :partial => "static/futurico/checkboxes"
 
           .last-col
 
