--- a/app/assets/stylesheets/modules/futurico-tabbox.css.sass
+++ b/app/assets/stylesheets/modules/futurico-tabbox.css.sass
@@ -16,6 +16,7 @@
       +border-radius(10px 10px 0 0)
       +box-shadow(inset 0 1px 0 rgba(#fff, .1))
       +vertical-gradient(#5b5d62, #4b4d51)
+      +user-select(none)
       &:hover
         +vertical-gradient(#666, #555)
       &:active
@@ -33,6 +34,7 @@
     background-color: #e5e5e5
     padding: 14px
     position: relative
+    +border-radius(0 10px 10px)
 
   // Tabbox icons to navigate inside (sub-navigation)
   .tabbox-navigation
@@ -45,6 +47,7 @@
       background-repeat: no-repeat
       cursor: pointer
       height: 64px
+      +user-select(none)
       &:hover
         background-color: #f0f0f0
         +box-shadow(inset 0 0 3px rgba(#000, .2))
@@ -67,6 +70,7 @@
     padding: 24px 29px
     position: relative
     z-index: 3
+    +box-shadow(3px 3px 5px -3px rgba(#000, .4))
     .heading
       border-bottom: 1px solid #e9e9e9
       color: #686868
