Tabbox preloader & status messages

--- a/app/views/static/futurico/_tabbox.html.haml
+++ b/app/views/static/futurico/_tabbox.html.haml
@@ -12,7 +12,11 @@
     .last-col
       .tabbox-content
         .heading
-          %h2 We are in the final stage now
+          %h2
+            We are in the final stage now
+            %span.status-message.positive Success message
+
+          .preloader
 
         %img{:src => "/assets/futurico/tabbox/fish-decor.png"}
 
