--- a/app/assets/stylesheets/modules/futurico-tabbox.css.sass
+++ b/app/assets/stylesheets/modules/futurico-tabbox.css.sass
@@ -18,10 +18,10 @@
       +vertical-gradient(#5b5d62, #4b4d51)
       +user-select(none)
       &:hover
-        +vertical-gradient(#666, #555)
+        +vertical-gradient(#64656b, #595a5f)
       &:active
         +box-shadow((inset 0 1px 0 rgba(#fff, .15), inset 0 1px 5px rgba(#000, .4)))
-        +vertical-gradient(#4b4d54, #3d3f44)
+        +vertical-gradient(#5b5d62, #4b4d51)
       &.active
         background: #e5e5e5
         color: #404040
@@ -71,9 +71,31 @@
     position: relative
     z-index: 3
     +box-shadow(3px 3px 5px -3px rgba(#000, .4))
-    .heading
-      border-bottom: 1px solid #e9e9e9
-      color: #686868
-      margin-bottom: 17px
-      padding-bottom: 15px
+
+  .heading
+    border-bottom: 1px solid #e9e9e9
+    color: #686868
+    margin-bottom: 17px
+    padding-bottom: 15px
+    position: relative
+
+  // Tabbox status messages
+  .status-message
+    color: #999
+    font: italic 11px $firm-font
+    padding-left: 10px
+    &.positive
+      color: #9cc346
+    &.negative
+      color: #c34646
+
+  // Tabbox preloader when something is loading
+  .preloader
+    background: image-url('futurico/tabbox/preloader.gif') 0 0 no-repeat
+    height: 16px
+    margin-top: -13px
+    position: absolute
+    right: 0
+    top: 50%
+    width: 16px
 
