--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -20,5 +20,8 @@
             = render :partial => "static/futurico/checkboxes"
 
           .futurico-content.last-col
-            = render :partial => "static/futurico/tabbox"
+            .mbl.pbl
+              = render :partial => "static/futurico/tabbox"
+            .mbl.pbl
+              = render :partial => "static/futurico/crossbar"
 
