--- a/app/views/static/futurico/_header.html.haml
+++ b/app/views/static/futurico/_header.html.haml
@@ -29,7 +29,7 @@
 .wrapper
   .site-info
     %h2.site-name
-      Futurico user interface
+      Scaffy user interface
       %span.version 1.0
 
     .about
