--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -27,4 +27,7 @@
                 = render :partial => "static/futurico/crossbar"
               .col1of3
                 = render :partial => "static/futurico/currently-playing"
+              .col1of3
+                .mll.pll
+                  = render :partial => "static/futurico/commutator"
 
