Details in header, commutator

--- a/app/views/static/futurico/_header.html.haml
+++ b/app/views/static/futurico/_header.html.haml
@@ -29,11 +29,11 @@
 .wrapper
   .site-info
     %h2.site-name
-      Scaffy user interface
+      Futurico user interface
       %span.version 1.0
 
     .about
       %span.legend-left
-      %span.legend-center beautiful ui components
+      %span.legend-center Based on Scaffy framework
       %span.legend-right
 
