Sticker with percents discount

--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -27,7 +27,10 @@
                 = render :partial => "static/futurico/crossbar"
               .col1of3
                 = render :partial => "static/futurico/currently-playing"
-              .col1of3
+              .col1of5
                 .mll.pll
-                  = render :partial => "static/futurico/commutator"
+                  = render :partial => "static/futurico/commutators"
+              .last-col
+                .mll.pll
+                  =render :partial => "static/futurico/sticker"
 
