--- a/app/views/static/futurico/_currently-playing.html.haml
+++ b/app/views/static/futurico/_currently-playing.html.haml
@@ -1,18 +1,15 @@
 .currently-playing
-  .playing-artist The Cardigans
-  .playing-song I Need Some Fine Wine And You
+  .playing.artist The Cardigans
+  .playing.song I Need Some Fine Wine And You
 
   .song-info.clearfix
-    .col1of4
-      .song-time-start -32:54
-
     -# We can reuse already existed scrollbox
-    .col1of2
+    .song-track
       .scrollbox.dot
         .hitbox
         .scale{:style => "width: 20%"}
           .slider
 
-    .col1of4
-      .song-time-end 32:54
+    .song-time.start -32:54
+    .song-time.end 32:54
 
