--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -2,7 +2,7 @@
 %html{:lang => "en-US"}
   %head
     %meta{:charset => "UTF-8"}
-      %title Scaffy showcase
+      %title Scaffy framework
       = stylesheet_link_tag "futurico"
   %body
     %img.background-light{:src => "/assets/futurico/background-light.png"}
