--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -36,4 +36,6 @@
 
             .mbl.pbl.clearfix
               =render :partial => "static/futurico/stickers"
+              .col1of3
+                =render :partial => "static/futurico/starbar"
 
