--- a/app/assets/stylesheets/modules/futurico-user-slug.css.sass
+++ b/app/assets/stylesheets/modules/futurico-user-slug.css.sass
@@ -18,6 +18,7 @@
     font: italic 11px $firm-font
     padding-left: 16px
     position: relative
+    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(#000, 1)), to(rgba(#000, .6)))
     &:before
       content: ''
       height: 4px
