--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -37,5 +37,9 @@
             .mbl.pbl.clearfix
               =render :partial => "static/futurico/stickers"
               .col1of3
-                =render :partial => "static/futurico/starbar"
+                .mbl.prl.mrl
+                  =render :partial => "static/futurico/progressbar"
+              .last-col
+                .mbm
+                  =render :partial => "static/futurico/starbar"
 
