Login block & Light square checkbox skin

--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -43,3 +43,8 @@
                 .mbm
                   =render :partial => "static/futurico/starbar"
 
+            .mbl.pbl.clearfix
+              .col2of5
+                .mrl.prl
+                =render :partial => "static/futurico/login"
+
