--- a/app/views/static/futurico/_checkboxes.html.haml
+++ b/app/views/static/futurico/_checkboxes.html.haml
@@ -16,3 +16,12 @@
   .checkbox.square.checked
     Square checkbox checked
 
+-# Light Square checkboxes set
+.mbm
+  .checkbox-light.square
+    Light checkbox
+
+.mbm
+  .checkbox-light.square.checked
+    Light checkbox checked
+
