Login block: password input proper type

--- a/app/views/static/futurico/_login.html.haml
+++ b/app/views/static/futurico/_login.html.haml
@@ -8,7 +8,7 @@
       %input{:type => "text", :placeholder => "login", :tabindex => "13"}
   .pts
     .text-rounded.light
-      %input{:type => "text", :placeholder => "password", :tabindex => "14"}
+      %input{:type => "password", :placeholder => "password", :tabindex => "14"}
 
   .login-buttons.clearfix
     .left.pts
