--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -45,6 +45,8 @@
 
             .mbl.pbl.clearfix
               .col2of5
-                .mrl.prl
                 =render :partial => "static/futurico/login"
+              .last-col
+                .mll.pll
+                  =render :partial => "static/futurico/datepicker"
 
