Dark skin special files structure

--- a/app/assets/stylesheets/modules/dark/crossbar.css.sass
+++ b/app/assets/stylesheets/modules/dark/crossbar.css.sass
@@ -1,4 +1,4 @@
-@import '../framework/config'
+@import '../../framework/config'
 
 .crossbar
   background: image-url('futurico/crossbar/center.png') center no-repeat
