--- a/app/assets/stylesheets/modules/dark/starbar.css.sass
+++ b/app/assets/stylesheets/modules/dark/starbar.css.sass
@@ -1,4 +1,4 @@
-@import '../framework/config'
+@import '../../framework/config'
 
 .starbar
   background: #94eaf3 image-url('futurico/starbar/background.png') 0 0 repeat-x
