--- a/app/views/static/futurico/_datepicker.html.haml
+++ b/app/views/static/futurico/_datepicker.html.haml
@@ -1,12 +1,12 @@
 .datepicker-placeholder
   .datepicker
-    .datepicker-close
+    .datepicker-close{:tabindex => "62"}
     .datepicker-header
-      .datepicker-back
+      .datepicker-back{:tabindex => "60"}
       .datepicker-today
         %span.month March
         %span.year 2012
-      .datepicker-forward
+      .datepicker-forward{:tabindex => "61"}
     %table.datepicker-calendar
       %tr
         %th Mon
@@ -21,37 +21,37 @@
         %td.inactive 2
         %td.inactive 3
         %td.inactive 4
-        %td 5
-        %td 6
-        %td 7
+        %td{:tabindex => "30"} 5
+        %td{:tabindex => "31"} 6
+        %td{:tabindex => "32"} 7
       %tr
-        %td 8
-        %td 9
-        %td 10
-        %td 11
-        %td 12
-        %td 13
-        %td 14
+        %td{:tabindex => "33"} 8
+        %td{:tabindex => "34"} 9
+        %td{:tabindex => "35"} 10
+        %td{:tabindex => "36"} 11
+        %td{:tabindex => "37"} 12
+        %td{:tabindex => "38"} 13
+        %td{:tabindex => "39"} 14
       %tr
-        %td 15
-        %td 16
-        %td.today 17
-        %td 18
-        %td 19
-        %td 20
-        %td 21
+        %td{:tabindex => "40"} 15
+        %td{:tabindex => "41"} 16
+        %td.today{:tabindex => "42"} 17
+        %td{:tabindex => "43"} 18
+        %td{:tabindex => "44"} 19
+        %td{:tabindex => "45"} 20
+        %td{:tabindex => "46"} 21
       %tr
-        %td 22
-        %td 23
-        %td 24
-        %td 25
-        %td 26
-        %td 27
-        %td 28
+        %td{:tabindex => "47"} 22
+        %td{:tabindex => "48"} 23
+        %td{:tabindex => "49"} 24
+        %td{:tabindex => "50"} 25
+        %td{:tabindex => "51"} 26
+        %td{:tabindex => "52"} 27
+        %td{:tabindex => "53"} 28
       %tr
-        %td 29
-        %td 30
-        %td 31
+        %td{:tabindex => "54"} 29
+        %td{:tabindex => "55"} 30
+        %td{:tabindex => "56"} 31
         %td.inactive 1
         %td.inactive 2
         %td.inactive 3
