Dark -> Futurico dark & Proper path for framework config in layout

--- a/app/views/static/futurico.html.haml
+++ b/app/views/static/futurico.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:charset => "UTF-8"}
       %title Scaffy framework
-      = stylesheet_link_tag "dark"
+      = stylesheet_link_tag "futurico-dark"
   %body
     %img.background-light{:src => "/assets/futurico/background-light.png"}
 
